# chindex

./: .gitignore  CLAUDE.md  README.md  commit_msg.txt  ecosystem.config.js  pyproject.toml  streamside_config.json
docs/: PROJECT_MEMORY_SPEC_v0.3.md  SCHEDULED_TASK_SETUP.md  project_memory_spec.md
scripts/: README.md  backup.ps1  e2e_smoke_p0.py  e2e_smoke_p1.py  ingest-memory-files.ps1  morning_brief.ps1  scheduled_sweep.ps1  start_mcp.ps1  start_pm2_services.ps1  test_scheduled_task_path.ps1  touch-memory-files.ps1  update_scheduled_task.ps1
specs/: BOOTSTRAPPING_COMPLETION_SPEC.md  P1_IMPLEMENTATION_SPEC.md  P2_IMPLEMENTATION_SPEC.md  P3_IMPLEMENTATION_SPEC.md  P4_IMPLEMENTATION_SPEC.md  P5_IMPLEMENTATION_SPEC.md
src/chinvex_mcp/: README.md  __init__.py  pyproject.toml  server.py
tests/: conftest.py  test_appserver_client.py  test_appserver_normalize.py  test_appserver_schemas.py  test_archive.py  test_archive_commands.py  test_archive_search_filtering.py  test_auto_archive.py  test_brief.py  test_chunking_v2.py  test_cli_ingest_hooks.py  test_cli_rerank.py  test_cli_state.py  test_cli_status.py  test_cli_update_memory.py  test_codex_ingestion.py  test_cohere_reranker.py  test_constraints_merger.py  test_context.py  test_context_backup.py  test_context_backup_integration.py  test_context_cli.py  test_context_v2_migration.py  test_decisions_appender.py  test_digest.py  test_embedding_metrics.py  test_embedding_providers.py  test_fingerprints.py  test_fts5.py  test_hook_installer.py  test_ingest_log.py  test_ingest_result.py  test_ingest_search.py  (+20 more)
(+101 files in other folders)
