[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chinvex-mcp"
version = "0.1.0"
description = "MCP server for Chinvex memory - Claude Desktop/Code integration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
chinvex-mcp = "chinvex_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["chinvex_mcp"]
